data/all_generated_tests/raw_wast_tests/loop_InfiniteLoops_498.wast
;; Test 9: Implement a loop with a `br_table` where valid indices map to `br_if` instructions with conditions changing in each iteration, ensuring loop labels and branching decisions avoid infinite loops.

(assert_invalid
  (module (func $test
    (local i32)
    (loop $loop (block $exit
      (br_if $exit (local.get 0))
      (local.set 0 (i32.const 5))
      (block $table (br_table $exit $loop (local.get 0)))
    ))
  ))
  "type mismatch"
)